<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    android:orientation="vertical" >

    <include
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:padding="10dp" >

        <TextView
            android:id="@+id/regis_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:paddingRight="20dp"
            android:text="@string/code"
            android:textColor="@color/darker_gray" >
        </TextView>

        <EditText
            android:id="@+id/codeEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="@string/register_code_digits"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/regis_code"
            android:background="@null"
            android:maxLength="16"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:layout_marginTop="0.3dp"
        android:padding="10dp" >

        <TextView
            android:id="@+id/regis_nicheng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:paddingRight="20dp"
            android:text="@string/nicheng"
            android:textColor="@color/darker_gray" >
        </TextView>

        <EditText
            android:id="@+id/regis_nichengEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/regis_nicheng"
            android:background="@null"
            android:maxLength="10"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:layout_marginTop="0.3dp"
        android:padding="10dp" >

        <TextView
            android:id="@+id/regis_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:paddingRight="20dp"
            android:text="@string/password"
            android:textColor="@color/darker_gray" >
        </TextView>

        <EditText
            android:id="@+id/regis_passEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="@string/register_password_digits"
            android:layout_toRightOf="@+id/regis_password"
            android:background="@null"
            android:layout_centerVertical="true"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:layout_marginTop="0.3dp"
        android:padding="10dp" >

        <TextView
            android:id="@+id/regis_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:paddingRight="20dp"
            android:text="@string/email"
            android:textColor="@color/darker_gray" >
        </TextView>

        <EditText
            android:id="@+id/regis_emEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/regis_email"
            android:background="@null"
            android:maxLength="28"
            android:textSize="16sp" />
    </RelativeLayout>

   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="35dp" >

        <Button
            android:id="@+id/regisyesbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:text="@string/regisyes"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >
    </LinearLayout>

</LinearLayout>