<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/me_gongneng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0.3dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/gongneng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/gongneng" >
        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/morede"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="8dp"
                android:src="@drawable/setting_iv_more" >
            </ImageView>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/me_huancun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0.3dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/huancun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/huancun" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/me_gengxin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0.3dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/gengxin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/gengxin" >
        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/bianhao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="8dp"
                android:text="V1.1.0"
                android:textColor="#666666"
                android:textSize="12sp" >
            </TextView>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/me_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0.3dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/guanyu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/guanyu" >
        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/morede2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="8dp"
                android:src="@drawable/setting_iv_more" >
            </ImageView>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/me_fankui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0.3dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/fankui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/fankui" >
        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/morede3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="8dp"
                android:src="@drawable/setting_iv_more" >
            </ImageView>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/me_tuichu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0.3dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tuichu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/login_out" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >
    </LinearLayout>

</LinearLayout>