<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    android:orientation="vertical" >

    <include
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/back_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="20dp"
            android:text="@string/code"
            android:textColor="@color/darker_gray" >
        </TextView>

        <EditText
            android:id="@+id/back_codeEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textCursorDrawable="@color/darker_gray"
            android:textColor="@color/darker_gray"
            android:digits="@string/register_code_digits"
            android:maxLength="16"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:layout_marginTop="0.3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="20dp"
            android:text="@string/email"
            android:textColor="@color/darker_gray" >
        </TextView>

        <EditText
            android:id="@+id/back_emEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/darker_gray"
            android:textCursorDrawable="@color/darker_gray"
            android:background="@null"
            android:maxLength="28"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:layout_marginTop="0.3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="20dp"
            android:text="@string/newpass"
            android:textColor="@color/darker_gray" >
        </TextView>

        <EditText
            android:id="@+id/new_passEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="@string/register_code_digits"
            android:textColor="@color/darker_gray"
            android:textCursorDrawable="@color/darker_gray"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:layout_marginTop="0.3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="20dp"
            android:text="@string/repass"
            android:textColor="@color/darker_gray" >
        </TextView>

        <EditText
            android:id="@+id/re_passEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="@string/register_code_digits"
            android:textColor="@color/darker_gray"
            android:textCursorDrawable="@color/darker_gray"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="35dp" >

        <Button
            android:id="@+id/backyesbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:text="取回"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >
    </LinearLayout>

</LinearLayout>